# boundary-api-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: boundary-dev-mode-test.yml  rust.yml
examples/: auth-dev-mode.rs
src/: lib.rs  main.rs
tests/: client_auth.rs  mod.rs
